#Changelog

**Botwinder 3.0** - 23rd of October, 2017
  * This update dropped several of the old features, some of them in favor of dedicated bots (giveaways,) others due to too much work maintaining them (livestream notifications,) etc...
  * You can self-host Botwinder Mk.III if you're brave enough.
  * Web-Config got a large update.
  * Public role groups are included in this update.
  * Much better command options - you can change permissions of all the commands, including your custom commands and aliases.

**Botwinder 2.4** - 25th of July, 2017
  * Beam renamed to Mixer... and some other changes with Hitbox as well. Weird stuff happening.
  * Command Options: Implemented channel whitelist. You can now use `!cmdChannelWhitelist` to allow a command to be used only in specific channels only.
  * Command Options: Formerly known command `!restrict` or `!restrictChannel` was renamed to `!cmdChannelBlacklist` to better accomodate the above change.
  * The usual bunch of tweaks, fixes, bugs and fixed bugs.
  * **WebConfig Upgrades**! (<http://botwinder.info/config>)
  * You can now pick roles and channels with a search bar instead of the role IDs
  * Custom Commands can now be created, edited and removed, using the WebConfig as well.

**Botwinder 2.3** - 26th of May, 2017
  * Minor update with some new features for events, and a bunch of fixes.
  * `!event score+` & `!event score-` options added. These will relatively add or subtract score to/from mentioned users. (The original `score` keyword was setting absolute value.)
  * `!help` now correctly handles all the things, including custom commands. Also fixed an issue caused by previous update where the regex parameter was not actually working right.
  * `!meetings` system was fixed and tweaked, thanks to `/r/linux_gaming` guys taking the time to find those issues <3