@@ -55,6 +55,9 @@
                         <li>Set up your own <b>custom commands</b>, with a few keywords! (<a href="/config">Can be configured.</a>)</li>
                         <li>You can <b>create an alias</b> to <i>any</i> command. (<code>!alias</code>)</li>
                         <li>Did you like <b>temporary channels</b> on TeamSpeak? No problem, we've got you. (<code>!tempChannel</code>)</li>
+                        <li>Let the members create a simple <code>memo</code> for themselves and display it, or a memo of other members.</li>
+                        <li><b>Cookies!</b> We have cookies! The karma system gives cookies to people who get thanked as an extra appreciation of helpful members of your community. (<a href="/config">Can be configured.</a>)</li>
+                        <li>Your members can gain <b>experience</b> for every message and image they send, <b>level up</b> and be assigned roles. All highly customizable. (They also get cookies for levelup.) (<a href="/config">Can be configured.</a>)</li>
                         <!--li>Create <b>scheduled messages</b> or timers. These can even be <b>scheduled commands</b>, so you can even schedule a daily <code>!nuke</code> of a channel! :D (<code>!timers</code>)</li-->
                         <!--li>Run a <b>poll</b>! Those can be as simple as with yes/no/abstain options, or you can add anything you desire. You can even choose to run a free poll where the user can vote on literally anything and it will be added as a new option! (<code>!poll</code>)</li-->
                         <!--li>Run the best <b>events</b> in the universe with signups, checkin, keep track of score, etc... (<code>!event</code>)</li-->
@@ -1026,6 +1029,108 @@
                     <tr>
                         <td>Parameters</td>
                         <td><code>name</code> of a PublicRole that you wish to leave.</td>
+                    </tr>
+                    <tr>
+                        <td>Permissions</td>
+                        <td>Everyone</td>
+                    </tr>
+                    </table>
+                </div>
+                <div class="features-indent">
+                    <h2>lvl</h2>
+                    <table class="command">
+                    <tr>
+                        <td>Description</td>
+                        <td>Displays your current level and how many messages (or images) would it take to reach the next.</td>
+                    </tr>
+                    <tr>
+                        <td>Parameters</td>
+                        <td>None</td>
+                    </tr>
+                    <tr>
+                        <td>Permissions</td>
+                        <td>Everyone</td>
+                    </tr>
+                    </table>
+                </div>
+                <div class="features-indent">
+                    <h2>cookies</h2>
+                    <table class="command">
+                    <tr>
+                        <td>Description</td>
+                        <td>How many cookies do you have?</td>
+                    </tr>
+                    <tr>
+                        <td>Parameters</td>
+                        <td>None</td>
+                    </tr>
+                    <tr>
+                        <td>Permissions</td>
+                        <td>Everyone</td>
+                    </tr>
+                    </table>
+                </div>
+                <div class="features-indent">
+                    <h2>nom</h2>
+                    <table class="command">
+                    <tr>
+                        <td>Description</td>
+                        <td>Consumes one of your cookies (effectively decreasing your cookie amount by one)</td>
+                    </tr>
+                    <tr>
+                        <td>Parameters</td>
+                        <td>None</td>
+                    </tr>
+                    <tr>
+                        <td>Permissions</td>
+                        <td>Everyone</td>
+                    </tr>
+                    </table>
+                </div>
+                <div class="features-indent">
+                    <h2>give</h2>
+                    <table class="command">
+                    <tr>
+                        <td>Description</td>
+                        <td>Give a cookie to your friend (this will effectively decrease the amount of cookies you have by one, and increase theirs.)</td>
+                    </tr>
+                    <tr>
+                        <td>Parameters</td>
+                        <td><code>@user</code> mention </td>
+                    </tr>
+                    <tr>
+                        <td>Permissions</td>
+                        <td>Everyone</td>
+                    </tr>
+                    </table>
+                </div>
+                <div class="features-indent">
+                    <h2>memo</h2>
+                    <table class="command">
+                    <tr>
+                        <td>Description</td>
+                        <td>Display your saved memo, or the memo of the mentioned user.</td>
+                    </tr>
+                    <tr>
+                        <td>Parameters</td>
+                        <td>None, or a <code>username</code></td>
+                    </tr>
+                    <tr>
+                        <td>Permissions</td>
+                        <td>Everyone</td>
+                    </tr>
+                    </table>
+                </div>
+                <div class="features-indent">
+                    <h2>setMemo</h2>
+                    <table class="command">
+                    <tr>
+                        <td>Description</td>
+                        <td>Overwrites previously saved message. This is per-user feature and unique between servers.</td>
+                    </tr>
+                    <tr>
+                        <td>Parameters</td>
+                        <td>None to wipe, otherwise the message to store.</td>
                     </tr>
                     <tr>
                         <td>Permissions</td>
